<resources>
    <string name="app_name">patelo</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="email_address">Email Address</string>
    <string name="haveLogin">Already have an account? Login</string>
    <string name="noAccount">Don’t have an account? Register</string>
    <string name="full_name">Full Name</string>
    <string name="account_type">Account Type (e.g. Personal or Business)</string>
    <string name="profile_img">Profile Image</string>
    <string name="name">Your Name</string>
    <string name="acc_type">Account Type</string>
    <string name="view_Profile">View Profile</string>
    <string name="share_event">Share Event</string>
    <string name="find_connections">Find Connections</string>
    <string name="your_data">Loading your data...</string>
    <string name="user_profile">User Profile</string>
    <string name="share_an_event">Share an Event</string>
    <string name="not_logged_in">Not logged in.</string>
    <string name="loading_error">Error loading data.</string>
    <string name="failed_to_load_profile">Failed to load profile.</string>
    <string name="type">"Account Type: "</string>
</resources>