<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp">

    <EditText
        android:id="@+id/emailField"
        android:layout_width="400dp"
        android:layout_height="50dp"
        android:autofillHints=""
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/passwordField"
        android:autofillHints=""
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_width="400dp"
        android:layout_height="100dp" />

    <EditText
        android:id="@+id/fullNameField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/full_name"
        android:inputType="textPersonName"
        android:layout_marginBottom="8dp" />

    <EditText
        android:id="@+id/accountTypeField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/account_type"
        android:inputType="text"
        android:layout_marginBottom="8dp" />


    <Button
        android:id="@+id/registerButton"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/register" />

    <TextView
        android:id="@+id/goToLoginText"
        android:layout_width="wrap_content"
        android:layout_height="139dp"
        android:layout_marginTop="24dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/haveLogin"
        android:textColor="#00695C"
        android:textSize="15sp"
        android:textStyle="bold" />

</LinearLayout>
