<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:orientation="vertical"
    android:gravity="center"
    android:background="#FFFFFF">

    <EditText
        android:id="@+id/emailField"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:background="@android:drawable/edit_text" />

    <EditText
        android:id="@+id/passwordField"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="12dp"
        android:layout_marginTop="16dp"
        android:background="@android:drawable/edit_text" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="100sp"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_marginTop="24dp"
        android:backgroundTint="#00695C"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/goToRegisterText"
        android:layout_width="wrap_content"
        android:layout_height="61dp"
        android:layout_marginTop="24dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/noAccount"
        android:textColor="#00695C"
        android:textSize="16sp"
        android:textStyle="bold" />

</LinearLayout>
